<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/editText_address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />


    <ScrollView
        android:id="@+id/scBar"
        android:layout_width="400dp"
        android:layout_height="390dp"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_address">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_name">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/serial_no"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/serial_no"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/itemName"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:text="@string/item_name"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:ems="10"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:text="@string/quantity_item"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/itemName_1"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="101"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_1"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="201"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/two"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/itemName_2"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="102"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_2"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="202"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/three"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/itemName_3"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="103"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_3"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="203"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/four"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/itemName_4"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="104"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_4"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="204"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/five"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/itemName_5"
                        android:layout_width="292dp"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="105"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/quantity_5"
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:tag="205"
                        android:textSize="16sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="add"
            android:text="@string/Add_row" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Shopkeeper_number"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:onClick="openWhatsApp"
            android:text="@string/SEND" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>